fix search overlapping navigation bar on x scroll

--- a/frontend/src/app/navigation-bar/navigation-bar.component.css
+++ b/frontend/src/app/navigation-bar/navigation-bar.component.css
@@ -3,6 +3,7 @@
   height: 100vh;
   width: 70px;
   position: fixed;
+  z-index: 2;
 }
 
 #avatar {
